# acp-sec

./: .gitignore  .railwayignore  ACP-SEC-Controls-Reference.md  ACP-SEC-Framework-v0.1.md  CHANGELOG.md  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
acpsec/: __init__.py  agent_client.py  catalogue.py  cli.py  config_loader.py  models.py  monitor.py  reporter.py  scorer.py  x402_spec.py
acpsec/checks/: __init__.py  auth.py  context.py  governance.py  input_validation.py  mcp.py  output_safety.py  plugin.py  privilege.py  x402.py
acpsec/injection/: __init__.py  payloads.py  runner.py
dashboard/: acp-sec-dashboard.html  auth_scanner.py  leaderboard.html  leaderboard.json  mock_facilitator.py  mock_mcp_server.py  monitor_dashboard.html  requirements.txt  scanner.html  scanner.py  serve.py
docs/superpowers/plans/: 2026-05-19-v030-polish-and-cloud-deploy.md
examples/: agent.yaml  bankrbot_simulation.scan.json  bankrbot_simulation.yaml  hardened_agent.scan.json  hardened_agent.yaml  mcp_agent_compliant.yaml  mcp_agent_misconfigured.yaml  x402_agent_compliant.scan.json  x402_agent_compliant.yaml  x402_agent_misconfigured.yaml
reports/: authenticated_benchmark_v1.json  base_mcp_benchmark_may2026.json  benchmark_may2026.json  benchmark_may2026_v2.json  benchmark_may2026_v3.json  benchmark_may2026_v4.json  benchmark_may2026_v4_round2.json  benchmark_visual.html
tests/: test_mcp.py  test_monitor.py  test_payloads.py  test_plugin.py  test_scorer.py  test_x402.py
