[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acpsec"
version = "0.3.1"
description = "ACP-SEC: AI Agent Communication Protocol Security Assessment Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
acpsec = "acpsec.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acpsec*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
